Fix and harden the Stream Flow search
The stream-flow trace could fail silently in several ways and never said what
it had covered. Both ends are fixed.

Bugs
- GET /stream-flow returned the view name "stream-flow" to an app with no
  template engine, so refreshing the page answered 500 (circular view path)
  instead of loading the SPA. The controller is API-only now, like /audit.
- An invalid regex was caught and dropped, leaving a plain substring search on
  the regex source; a malformed search path matched nothing anywhere. Both are
  rejected with the reason, returned as {"message": ...} because
  server.error.include-message defaults to "never".
- A search path fell back to a raw substring search on any payload it could not
  be applied to, reporting hits the path had never matched.
- Occurrences were sorted globally and each consecutive pair linked, so a key
  seen twice in one topic drew back-edges and topics sharing a millisecond drew
  a different graph on each run. One node per topic, chained by first sighting.
- maxMessagesPerTopic is a primitive int: a body omitting it scanned zero
  records per topic. Floors to 100.
- XPath was evaluated as STRING, so a match on the second <item> was invisible.
- Node/edge maps used Map.of, whose iteration order is randomised per JVM run,
  under a renderer that falls back to positional access.

Optimisation
- JSONPath compiled once per request, XPath once per topic (both were
  recompiled per record); JSONPath runs with SUPPRESS_EXCEPTIONS instead of a
  stack trace per missing path.
- Wall-clock budget (explorer.stream-flow-timeout-ms) — join() was unbounded
  while each topic read carries its own 20s broker budget — plus a topic cap
  for a scan with no target (explorer.stream-flow-max-topics), and the
  explorer's own internal.* topics are out of a blind scan.

UX
- The response carries per-topic hits (count, first/last sighting, hop latency,
  partition/offset/key, payload preview), scan stats and warnings, so an e